5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1590_1017.log
== SUBMITION (2019-03-25 17:54:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01
from math import* 
d = radians(R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				print(round(d , 2))

-- EXECUTION TIME:
0.158135
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 12
    print(round(d , 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 17:54:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01
from math import* 
d = radians(R*arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				print(round(d , 2))

-- ERROR:
File "XXXX", line 12
    print(round(d , 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 17:55:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01
from math import* 
d = radians(R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d , 2))

-- ERROR:
File "XXXX", line 12
    print(round(d , 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 17:56:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01
from math import* 
d = radians(R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- ERROR:
File "XXXX", line 12
    print(round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 17:56:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01
from math import* 
d = radians(R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.135152
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 12
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 17:56:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01
from math import* 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))

-- EXECUTION TIME:
0.155868
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 12
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 17:56:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01
from math import* 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))

-- ERROR:
File "XXXX", line 12
    print(round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 17:56:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01
from math import* 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))

-- ERROR:
File "XXXX", line 12
    print(round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 17:56:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01
from math import* 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))

-- EXECUTION TIME:
0.149804
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 12
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 17:57:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))

-- ERROR:
File "XXXX", line 11
    print(round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 17:58:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))

-- EXECUTION TIME:
0.168719
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 11
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 17:59:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)


-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 17:59:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)


-- EXECUTION TIME:
0.16928
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 12
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 17:59:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)

-- EXECUTION TIME:
0.140797
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 11
    
                                                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 17:59:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)

-- ERROR:
File "XXXX", line 11
    
                                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:00:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- ERROR:
File "XXXX", line 11
    print(round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:01:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2)
-- EXECUTION TIME:
0.138662
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 11
    print(round(d,2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:01:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- ERROR:
File "XXXX", line 11
    print(round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:01:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(d,2))
-- EXECUTION TIME:
0.1646
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 11
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:01:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(d)
-- ERROR:
File "XXXX", line 11
    print(d)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:01:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(d)
-- EXECUTION TIME:
0.164974
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 11
    print(d)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:02:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d , 2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:02:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("lat de P2:")))
g2 = radians(float(input("long de P2:")))
R = 6371.01 
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d , 2))
-- EXECUTION TIME:
0.138136
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
